sahara (2015.1.0-3) unstable; urgency=medium

  * Removes obsolete patches.

 -- Thomas Goirand <zigo@debian.org>  Tue, 26 May 2015 13:51:04 +0200

sahara (2015.1.0-2) unstable; urgency=medium

  * Added pt.po translation of Debconf messages (Closes: #784595).

 -- Thomas Goirand <zigo@debian.org>  Tue, 12 May 2015 23:13:52 +0200

sahara (2015.1.0-1) unstable; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 30 Apr 2015 22:02:01 +0000

sahara (2015.1~rc2-1) unstable; urgency=medium

  * New upstream release.
  * Uploading to unstable.
  * Reviewed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Fri, 02 Jan 2015 17:35:30 +0100

sahara (2014.2.1-1) experimental; urgency=medium

  * New upstream release.
  * Now requires openstack-pkg-tools (>= 20~).

 -- Thomas Goirand <zigo@debian.org>  Mon, 15 Dec 2014 05:17:43 +0000

sahara (2014.2-2) experimental; urgency=medium

  * Fixed the sahara endpoint url from v1 to v1.1.

 -- Thomas Goirand <zigo@debian.org>  Wed, 29 Oct 2014 20:55:18 +0800

sahara (2014.2-1) experimental; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 16 Oct 2014 20:10:10 +0800

sahara (2014.2~rc2-1) experimental; urgency=medium

  * New upstream release.
  * Review short description.

 -- Thomas Goirand <zigo@debian.org>  Sun, 12 Oct 2014 16:04:55 +0800

sahara (2014.2~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Added python-mysqldb as dependency.
  * Updated (build-)depends for this release.
  * Now using templated init script for sysv-rc, generated systemd unit and
    upstart jobs, using openstack-pkg-tools >= 13.
  * Removed Use_auth_uri_parameter_from_config.patch applied upstream.
  * Added doc-base registration file in sahara-doc.
  * Standards-Version is now 3.9.6 (no change).

 -- Thomas Goirand <zigo@debian.org>  Sun, 05 Oct 2014 11:16:07 +0800

sahara (2014.2~b3-1) experimental; urgency=medium
