@@ -1,1 +1,2 @@
 /usr/bin/*
+usr/share/sahara/*
